[Keycloak]: Add keycloak server and update spring server infromation.